tests/cases/invalid/when-action-block-var-uses-let/example.mld
when true => [
  var @x = 1
]
